<?xml version="1.0"?>
<package>
  <name>uvic_scanner</name>
  <version>0.0.0</version>
  <description>The uvic_scanner package</description>
  <maintainer email="david@swords.computer">s</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>uvic_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>laser_geometry</build_depend>
  <run_depend>tf</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>uvic_msgs</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>laser_geometry</run_depend>
  <export>
  </export>
</package>
